# hangulpia

./: .gitignore  README.md
.github/workflows/: deploy-homepage.yml
core/: CHANGELOG.md  Cargo.toml  commitlint.config.js
core/.github/: labeler.yml
core/.github/PULL_REQUEST_TEMPLATE/: default.md
core/.github/workflows/: auto-label.yml  ci.yml  promote-production.yml  rollback.yml
core/.husky/: pre-commit
core/crates/cli/: Cargo.toml
core/crates/cli/src/: combined_benchmark.rs  ngram_benchmark.rs  scaling_test.rs  vocab_benchmark.rs  vocab_scaling_d.rs
core/crates/core/: Cargo.toml
core/crates/core/src/: engine.rs
core/crates/db/: Cargo.toml
core/crates/db/src/: generator.rs  kana_hangul.rs  lib.rs  phonetic_decoder.rs  sentence.rs  vocab_extended.rs  vocab_large.rs
core/crates/hangul/src/: automaton.rs  lib.rs
core/crates/japanese/src/: lib.rs
core/crates/macos-ime/: Package.swift  build.sh  dist.sh  reinstall.sh
core/crates/macos-ime/HangulJapaneseIME/Resources/: Info.plist
core/crates/macos-ime/HangulJapaneseIME/Sources/: AppDelegate.swift  HJInputController.swift
core/crates/macos-ime/include/: module.modulemap
core/crates/macos-ime/src/: ffi.rs
core/crates/windows-ime/: Cargo.toml
core/crates/windows-ime/src/: engine.rs  windows_impl.rs
core/scripts/: setup-branch-protection.sh  setup-coding-harness.sh  setup-github-secrets.sh
docs/: MODEL.md
homepage/: CNAME  README.md  index.html
infra/lambda/: index.mjs
infra/terraform/: .gitignore  click_tracker.tf  main.tf  outputs.tf  variables.tf
한글일본어입력기/: .gitignore  CHANGELOG.md  HangulJapaneseIME_Research_Paper.docx  test_debug.rs  한글일본어입력기_연구논문.docx
한글일본어입력기/.github/workflows/: agent-pr-staging.yml  release-build.yml
한글일본어입력기/.husky/: commit-msg
한글일본어입력기/crates/android-bridge/: Cargo.toml
한글일본어입력기/crates/android-bridge/src/: lib.rs
한글일본어입력기/crates/cli/src/: adjacent_sweep.rs  autocomplete_bench.rs  benchmark.rs  directional_test.rs  ime_comparison.rs  long_vowel_analysis.rs  main.rs  optimal_benchmark.rs  phonetic_benchmark.rs  phonetic_diag.rs  phonetic_improve.rs  scaling_optimal.rs  vocab_scaling.rs  wiki_benchmark.rs  window_test.rs
한글일본어입력기/crates/core/src/: keymap.rs  lib.rs
한글일본어입력기/crates/db/src/: autocomplete.rs  corpus.rs  dictionary.rs  embedding.rs  ngram.rs  phonetic_decoder.rs  trainer.rs  vocab.rs
한글일본어입력기/crates/hangul/: Cargo.toml
한글일본어입력기/crates/hangul/src/: jamo.rs  phoneme.rs
한글일본어입력기/crates/japanese/: Cargo.toml
한글일본어입력기/crates/japanese/src/: romaji.rs
한글일본어입력기/crates/macos-ime/: Cargo.toml  dist.sh  enable_ime.swift
한글일본어입력기/crates/macos-ime/HangulJapaneseIME/Resources/: Info.plist
한글일본어입력기/crates/macos-ime/HangulJapaneseIME/Sources/: BridgingHeader.h  CandidateWindowController.swift  HJEngine.swift  main.swift
한글일본어입력기/crates/macos-ime/include/: hj_engine.h
한글일본어입력기/crates/macos-ime/src/: ffi.rs  lib.rs
한글일본어입력기/crates/windows-ime/: README-Windows.txt  build.bat  install.bat  uninstall.bat
한글일본어입력기/crates/windows-ime/src/: hangul.rs  main.rs
한글일본어입력기/scripts/: agent-commit.sh  bootstrap-harness.sh
