[package]
name = "ime-db"
description = "SQLite-based dictionary and user data storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
