[package]
name = "ime-windows"
description = "Windows IME — Hangul-to-Japanese input method for Windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "HangulJapaneseIME"
path = "src/main.rs"

[dependencies]
ime-core = { path = "../core" }
ime-hangul = { path = "../hangul" }
ime-japanese = { path = "../japanese" }
ime-db = { path = "../db" }
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
tray-item = "0.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Stub for cross-compilation check (won't actually run)
