[package]
name = "ime-japanese"
description = "Japanese input engine with Romaji-to-Kana and Kana-to-Kanji conversion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ime-core = { path = "../core" }
ime-db = { path = "../db" }
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
